adding queries project

--- a/queries/index.html
+++ b/queries/index.html
@@ -19,13 +19,13 @@
 	
 	<main>
 		<section>
-			<div>
+			<div class="no-phone">
 			<ul>
 				<li>list item</li>
 				<li>list item</li>
 				<li>list item</li>
 				<li>list item</li>
-				<li></li>
+				<li>list item</li>
 			</ul>
 			</div>
 
@@ -48,8 +48,9 @@
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam sint odit nostrum natus, atque! Consequuntur cum impedit, eum nobis, minus laudantium exercitationem soluta pariatur, temporibus laboriosam dicta incidunt nesciunt asperiores.</p>
 				<button>learn more</button>
 			</div>
-			<div>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem voluptates voluptas aliquam inventore temporibus omnis necessitatibus nemo debitis libero? Obcaecati asperiores, perferendis eligendi mollitia fuga blanditiis laboriosam quibusdam illum, debitis!</p>
+			<div class="no phone">
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem voluptates voluptas aliquam inventore temporibus omnis necessitatibus nemo debitis libero? Obcaecati asperiores, perferendis eligendi mollitia fuga blanditiis laboriosam quibusdam illum, debitis!</p> 
+				<button>learn more</button>
 			</div>
 						
 					
@@ -59,7 +60,17 @@
 	</main>
 
 	<footer>Copyright 2015 &copy; All Rights Reserved</footer>
-
+	
+<header>
+		<nav>
+			<ul>
+				<li><a href="#">link 01</a></li>
+				<li><a href="#">link 02</a></li>
+				<li><a href="#">link 03</a></li>
+				<li><a href="#">link 04</a></li>
+			</ul>
+		</nav>
+	</header>
 	
 </body>
 </html>
